@@ -2,7 +2,6 @@ package io.mangoo.routing.handlers;
 
 import io.undertow.server.HttpHandler;
 import io.undertow.server.HttpServerExchange;
-import io.undertow.util.AttachmentKey;
 
 /**
  *
@@ -11,7 +10,6 @@ import io.undertow.util.AttachmentKey;
  */
 @SuppressWarnings("all")
 public class DispatcherHandler implements HttpHandler {
-    private static final AttachmentKey<Throwable> THROWABLE = AttachmentKey.create(Throwable.class);
     private Class<?> controllerClass;
     private String controllerMethod;
 
@@ -22,11 +20,7 @@ public class DispatcherHandler implements HttpHandler {
 
     @Override
     public void handleRequest(HttpServerExchange exchange) throws Exception {
-        try {
-            exchange.dispatch(exchange.getDispatchExecutor(), new RequestHandler(this.controllerClass, this.controllerMethod));
-        } catch (Exception e) {
-            exchange.putAttachment(THROWABLE, e);
-            throw new Exception();
-        }
+        RequestHandler requestHandler = new RequestHandler(this.controllerClass, this.controllerMethod);
+        requestHandler.handleRequest(exchange);
     }
 }
